added stripe and be

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,10 @@
 
 [build.environment]
   NODE_VERSION = "18"
+
+# Ensure all routes are handled by the SPA
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = true
