--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "stripe": "^17.3.0",
     "three": "^0.161.0",
     "zustand": "^4.5.1"
   },
