--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "postbuild": "cp _redirects dist/",
     "lint": "eslint .",
     "preview": "vite preview",
