--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
-  functions = "netlify/functions"
+command = "npm install && npm run build"
+publish = "dist"
+functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
