--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "postbuild": "cp _redirects dist/",
+    "build": "tsc && vite build",
+    "postbuild": "cp _redirects dist/ && cp robots.txt dist/ && cp sitemap.xml dist/",
     "lint": "eslint .",
     "preview": "vite preview",
     "netlify:dev": "netlify dev"
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "stripe": "^14.18.0",
@@ -43,8 +44,8 @@
     "netlify-cli": "^17.37.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.6.3",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.2"
   }
 }
