--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-command = "npm install && npm run build"
-publish = "dist"
-functions = "netlify/functions"
+  command = "npm run build"
+  publish = "dist"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
@@ -22,5 +22,3 @@ functions = "netlify/functions"
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["stripe"]
-
-  
