--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "resend": "^3.2.0",
     "stripe": "^14.18.0",
     "three": "^0.161.0",
     "zustand": "^4.5.1"
