--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "netlify:dev": "netlify dev"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.0",
+    "@contentful/rich-text-types": "^16.3.0",
+    "contentful": "^10.6.14",
     "@netlify/functions": "^2.6.0",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
