--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "postbuild": "cp _redirects dist/",
+    "postbuild": "cp _redirects dist/ && tsx scripts/generate-sitemap.ts",
     "lint": "eslint .",
     "preview": "vite preview",
-    "netlify:dev": "netlify dev"
+    "netlify:dev": "netlify dev",
+    "generate:sitemap": "tsx scripts/generate-sitemap.ts"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.19.0",
     "@contentful/rich-text-types": "^16.3.0",
-    "contentful": "^10.6.14",
     "@netlify/functions": "^2.6.0",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.3",
+    "contentful": "^10.6.14",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -35,12 +36,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.5",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.161.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "dotenv": "^16.4.5",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -48,6 +51,7 @@
     "netlify-cli": "^17.37.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
