--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-three/fiber": "^8.15.16",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.3",
     "contentful": "^10.6.14",
     "jspdf": "^2.5.1",
