--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "contentful": "^10.6.14",
     "jspdf": "^2.5.1",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
