--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "yarn build && yarn postbuild"
   publish = "dist"
   functions = "netlify/functions"
 
